<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88CEFA"
        android:paddingLeft="10dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/login3"
            android:layout_marginStart="120dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/password3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/login3"
            android:layout_marginStart="120dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/login4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newuser"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>